--- a/documents/Topología_I/Tema_1.tex
+++ b/documents/Topología_I/Tema_1.tex
@@ -584,7 +584,7 @@
     \endsquare
 \end{ejemplo}
 
-\begin{teo}
+\begin{teo}\label{teorema1_6}
     Sea $(X,\cc{T})$ un espacio topológico y $\cc{B}$ una base suya. Entonces:
     \begin{enumerate}
         \item[\objetivo{B1}] $X=\bigcup\limits_{B\in \cc{B}}B$
@@ -1266,7 +1266,7 @@
 \begin{definicion}
     Un e.t. $(X, \cc{T})$ se dice:
     \begin{itemize}
-        \item \textbf{T1} (o de \textbf{Fréchet}, o que satisface el \textbf{primer axioma de separación}) si $\forall x,y \in X$ con $x\neq y$, $\exists V \in \cc{N}_x$, $W\in \cc{N}_y$ con $y\notin V$, $x\notin W$.
+        \item \objetivo{T1} (o de \textbf{Fréchet}, o que satisface el \textbf{primer axioma de separación}) si $\forall x,y \in X$ con $x\neq y$, $\exists V \in \cc{N}_x$, $W\in \cc{N}_y$ con $y\notin V$, $x\notin W$.
         
         \begin{center}
             \begin{tikzpicture}
@@ -1292,7 +1292,7 @@
 
         Esta definición se podría hacer análogamente con abiertos, abiertos básicos o entornos básicos.
 
-        \item \textbf{T2} (o de \textbf{Haussforff}, o que satisface el \textbf{segundo axioma de separación}) si $\forall x,y \in X$ con $x\neq y$, $\exists V \in \cc{N}_x$, $W\in \cc{N}_y$ tal que $V\cap W = \emptyset$.
+        \item \objetivo{T2} (o de \textbf{Haussforff}, o que satisface el \textbf{segundo axioma de separación}) si $\forall x,y \in X$ con $x\neq y$, $\exists V \in \cc{N}_x$, $W\in \cc{N}_y$ tal que $V\cap W = \emptyset$.
         
         \begin{center}
             \begin{tikzpicture}
@@ -1374,8 +1374,8 @@
 \begin{definicion}
     Diremos que un e.t $(X, \cc{T})$ es 
     \begin{itemize}
-        \item \textbf{1AN} (o que cumple el \textbf{primer axioma de numerabilidad}) si todo punto de $x$ tiene una base de entornos numerable.
-        \item \textbf{2AN} (o que cumple el \textbf{segundo axioma de numerabilidad}) si existe una base de $\cc{T}$ numerable.
+        \item \objetivo{1AN} (o que cumple el \textbf{primer axioma de numerabilidad}) si todo punto de $x$ tiene una base de entornos numerable.
+        \item \objetivo{2AN} (o que cumple el \textbf{segundo axioma de numerabilidad}) si existe una base de $\cc{T}$ numerable.
     \end{itemize}
     \endsquare
 \end{definicion}
